# encrypted-notes-manager

./: .pre-commit-config.yaml  README.md
.github/workflows/: backend-dev.yaml  backend-main.yaml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/encrypted_notes/: api.py  cli.py  core.py  crypto.py  errors.py  json.py  models.py
backend/encrypted_notes/storage/: file_storage.py  sql_storage.py  storage.py
backend/tests/: test_core.py  test_crypto.py  test_storage.py
